--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,22 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+
+  
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*{
+  transition: all ease-in-out 0.2s;
+}
+
 @layer base {
   * {
     @apply border-border;
